--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,15 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <style>
+      body {
+        margin: 0px;
+        background-color: #000;
+        overflow: hidden;
+      }
+    </style>
   </head>
   <body>
-    <canvas id="game-area" class="game-area"></canvas>
     <script src="bundle.js"></script>
   </body>
 </html>
